--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-    "extends": "@snowstorm/core/tsconfig.base.json"
+  "compilerOptions": {
+    "jsx": "react"
+  },
+  "extends": "@snowstorm/core/tsconfig.base.json"
 }
