deploy: 2b8315b8e153a77a60c161e7ec1bd48a7ea8602d

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -132,11 +132,18 @@
   "index.js": [],
   "index.html": [],
   "../../../../../../../../sites/lust/pages/index.module.scss?used": [
-    "/assets/index.bfa0fc97.js",
-    "/assets/index.fed05d23.css"
+    "/assets/index.9164e88f.js",
+    "/assets/index.fed05d23.css",
+    "/assets/lust_large.92e6c9cf.png"
+  ],
+  "../../../../../../../../sites/lust/assets/lust_large.png": [
+    "/assets/index.9164e88f.js",
+    "/assets/index.fed05d23.css",
+    "/assets/lust_large.92e6c9cf.png"
   ],
   "../../../../../../../../sites/lust/pages/index.tsx": [
-    "/assets/index.bfa0fc97.js",
-    "/assets/index.fed05d23.css"
+    "/assets/index.9164e88f.js",
+    "/assets/index.fed05d23.css",
+    "/assets/lust_large.92e6c9cf.png"
   ]
 }
