deploy: b22fdf63cb2b699c45d27b63b4a10bf8d600cf6b

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -131,19 +131,31 @@
   "../../client/index.js": [],
   "index.js": [],
   "index.html": [],
+  "../../../../../../../../sites/lust/pages/achievements.tsx": [
+    "/assets/achievements.c37d8fc6.js"
+  ],
   "../../../../../../../../sites/lust/pages/index.module.scss?used": [
-    "/assets/index.9164e88f.js",
-    "/assets/index.fed05d23.css",
-    "/assets/lust_large.92e6c9cf.png"
+    "/assets/index.3687a2cb.js",
+    "/assets/index.0d5205c0.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png"
   ],
   "../../../../../../../../sites/lust/assets/lust_large.png": [
-    "/assets/index.9164e88f.js",
-    "/assets/index.fed05d23.css",
-    "/assets/lust_large.92e6c9cf.png"
+    "/assets/index.3687a2cb.js",
+    "/assets/index.0d5205c0.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png"
+  ],
+  "../../../../../../../../sites/lust/assets/lust_small.png": [
+    "/assets/index.3687a2cb.js",
+    "/assets/index.0d5205c0.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png"
   ],
   "../../../../../../../../sites/lust/pages/index.tsx": [
-    "/assets/index.9164e88f.js",
-    "/assets/index.fed05d23.css",
-    "/assets/lust_large.92e6c9cf.png"
+    "/assets/index.3687a2cb.js",
+    "/assets/index.0d5205c0.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png"
   ]
 }
