--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "license": "MIT",
   "dependencies": {
     "@explodingcamera/eslint-config": "^21.0.0-1",
-    "@snowstorm/cli": "0.7.3--canary.27.9e2308e.0",
-    "@snowstorm/core": "0.7.3--canary.27.9e2308e.0",
+    "@snowstorm/cli": "0.8.0",
+    "@snowstorm/core": "0.8.0",
     "@supabase/supabase-js": "^1.29.3",
+    "classnames": "^2.3.1",
     "eslint": "^8.7.0",
     "openapi-typescript": "^5.1.0",
     "react": "18.0.0-rc.0",
