--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -1,6 +1,6 @@
 {
   "../../../../../../../../vite/modulepreload-polyfill": [],
-  "../../../../../../@snowstorm+serverprops@0.7.3--canary.27.9e2308e.0/node_modules/@snowstorm/serverprops/lib/internal.js": [],
+  "../../../../../../@snowstorm+serverprops@0.8.0/node_modules/@snowstorm/serverprops/lib/internal.js": [],
   "../../../../../../../../\u0000commonjsHelpers.js": [],
   "../../../../../../../../\u0000/home/runner/work/LUST/LUST/node_modules/.pnpm/react@18.0.0-rc.0/node_modules/react/index.js?commonjs-module": [],
   "../../../../../../../../\u0000/home/runner/work/LUST/LUST/node_modules/.pnpm/react@18.0.0-rc.0/node_modules/react/cjs/react.production.min.js?commonjs-exports": [],
@@ -131,31 +131,46 @@
   "../../client/index.js": [],
   "index.js": [],
   "index.html": [],
-  "../../../../../../../../sites/lust/pages/achievements.tsx": [
-    "/assets/achievements.c37d8fc6.js"
-  ],
   "../../../../../../../../sites/lust/pages/index.module.scss?used": [
-    "/assets/index.3687a2cb.js",
-    "/assets/index.0d5205c0.css",
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
-    "/assets/lust_small.a5328b89.png"
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/assets/lust_large.png": [
-    "/assets/index.3687a2cb.js",
-    "/assets/index.0d5205c0.css",
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
-    "/assets/lust_small.a5328b89.png"
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/assets/lust_small.png": [
-    "/assets/index.3687a2cb.js",
-    "/assets/index.0d5205c0.css",
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
-    "/assets/lust_small.a5328b89.png"
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
+  ],
+  "../../../../../../../../\u0000/home/runner/work/LUST/LUST/node_modules/.pnpm/classnames@2.3.1/node_modules/classnames/index.js?commonjs-module": [
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
+  ],
+  "../../../../../../classnames@2.3.1/node_modules/classnames/index.js": [
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/pages/index.tsx": [
-    "/assets/index.3687a2cb.js",
-    "/assets/index.0d5205c0.css",
+    "/assets/index.13fe2be0.js",
+    "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
-    "/assets/lust_small.a5328b89.png"
+    "/assets/lust_small.a5328b89.png",
+    "/assets/background.46e74626.jpg"
   ]
 }
