deploy: 52bafcd08e478783cc436a3d228abfee3e955293

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -132,45 +132,59 @@
   "index.js": [],
   "index.html": [],
   "../../../../../../../../sites/lust/pages/index.module.scss?used": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/assets/lust_large.png": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/assets/lust_small.png": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
+    "/assets/background.46e74626.jpg"
+  ],
+  "../../../../../../../../sites/lust/assets/travolta.gif": [
+    "/assets/index.da9225f6.js",
+    "/assets/index.52022b3c.css",
+    "/assets/lust_large.92e6c9cf.png",
+    "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../\u0000/home/runner/work/LUST/LUST/node_modules/.pnpm/classnames@2.3.1/node_modules/classnames/index.js?commonjs-module": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ],
   "../../../../../../classnames@2.3.1/node_modules/classnames/index.js": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ],
   "../../../../../../../../sites/lust/pages/index.tsx": [
-    "/assets/index.13fe2be0.js",
+    "/assets/index.da9225f6.js",
     "/assets/index.52022b3c.css",
     "/assets/lust_large.92e6c9cf.png",
     "/assets/lust_small.a5328b89.png",
+    "/assets/travolta.b79d232b.gif",
     "/assets/background.46e74626.jpg"
   ]
 }
